jalv (1.6.9) unstable; urgency=medium

  * Add AppStream metainfo file
  * Add Qt6 version
  * Add missing short versions of command line options
  * Add option to install tool man pages
  * Add support for control inputs with time:beatsPerMinute designation
  * Add support for control outputs with lv2:latency designation
  * Avoid over-use of yielding meson options
  * Build Qt UI with -fPIC
  * Clean up and strengthen code
  * Clean up command line help output
  * Cleanly separate audio thread from the rest of the application
  * Fix Jack latency recomputation when plugin latency changes
  * Fix clashing command line options
  * Fix minor memory leaks
  * Make help and version commands exit successfully
  * Only send control messages to designated lv2:control ports
  * Only send position to ports that explicitly support it
  * Reduce Jack process callback overhead
  * Remove Gtk2 interface
  * Remove limits on the size of messages sent from plugin to UI
  * Remove transport position dumping from Jack process callback
  * Replace use of deprecated Gtk interfaces
  * Rewrite man pages in mdoc
  * Simplify and unify plugin and preset command-line arguments
  * Switch to external zix dependency
  * Use Gtk switches instead of checkboxes for toggle controls
  * Use fewer platform-specific APIs
  * Use portable zix filesystem API

 -- David Robillard <d@drobilla.net>  Sun, 28 Sep 2025 13:54:35 +0000

jalv (1.6.8) stable; urgency=medium

  * Add Gtk plugin selector UI and desktop file
  * Add missing option in console help output
  * Add version option to console executable
  * Build Qt interface as C++14
  * Change no-menu short option to m to avoid clash with jack-name
  * Clean up and modernize code
  * Fix "preset" console command when "presets" hasn't been called
  * Fix MSVC build
  * Fix atom buffer alignment
  * Fix crash when running jalv without arguments
  * Fix man page headers
  * Fix memory leaks
  * Fix outdated man pages