@@ -98,6 +98,8 @@ Print output control values.
 Print available presets.
 .It Ic preset Ar uri
 Set preset.
+.It Ic quit
+Quit program.
 .It Ic set index value
 Set control value by port index.
 .It Ic set Ar symbol Ar value
